syntax = "proto3";

package product;

option go_package = "internal/product";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (Product);
    rpc GetProduct(GetProductRequest) returns (Product);
    rpc UpdateProduct(UpdateProductRequest) returns (Product);
    rpc DeleteProduct(DeleteProductRequest) returns (Product);
    rpc ListProduct(Empty) returns (ListProductResponse);
}

message Empty {}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    int64 price = 5;
    int32 stock = 6;
    string createdAt = 7;
    string updatedAt = 8;
}

// Request
message CreateProductRequest {
    string name = 1;
    string description = 2;
    string category = 3;
    int64 price = 4;
    int32 stock = 5;
}

message GetProductRequest {
    string id = 1;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    int64 price = 5;
    int32 stock = 6;
}

message DeleteProductRequest {
    string id = 1;
}

// Response
message ListProductResponse {
    repeated Product products = 1;
}