syntax = "proto3";

package order;

// import "google/protobuf/empty.proto";

option go_package = "internal/order";

service OrderService {
    rpc CreateOrderProduct(CreateOrderProductRequest) returns (Order);
    rpc UpdateStatus(UpdateOrderStatusRequest) returns (Order) {}
    rpc Cancel(CancelOrderRequest) returns (Order) {}
    rpc FindByOrderId(FindByOrderIdRequest) returns (Order) {}
    rpc ListOrder(ListOrderRequest) returns (ListOrderResponse) {}
}

message Empty{}

message Order {
  string order_id = 1;
  int32 user_id = 2;
  string type = 3;
  int64 total_amount = 4;
  string status = 5;
  repeated Product products = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

// Request
message User {
    int32 id = 1;
    string email = 3;
    string role = 4;
}

message Product {
    string id = 1;
    int32 qty = 2;
}

message CreateOrderProductRequest {
    User user = 1;
    repeated Product products = 2;
}

message UpdateOrderStatusRequest {
    string order_id = 1;
    string status = 2;
}

message CancelOrderRequest {
    string order_id = 1;
}

message FindByOrderIdRequest {
    string order_id = 1;
}

message ListOrderRequest {
    string status = 2;
    int32 page = 3;
}

// Response
message ListOrderResponse {
    repeated Order orders = 1;
}